# palace

server/: Cargo.toml
server/src/: data.rs  game.rs  main.rs  message.rs  room.rs
shared/: Cargo.toml
shared/src/: card.rs  deck.rs  error.rs  game.rs  hand.rs  lib.rs  pile.rs
